@@ -12,7 +12,7 @@ import springfox.documentation.service.Contact;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebMvc
@@ -27,7 +27,7 @@ public class SwaggerConfig {
 
         return new Docket(DocumentationType.SWAGGER_2)
                 .useDefaultResponseMessages(true)
-                .securitySchemes(Arrays.asList(apiKey()))
+                .securitySchemes(List.of(apiKey()))
                 .apiInfo(apiInfo)
                 .select()
                 .apis(RequestHandlerSelectors.basePackage("class2.a204.controller"))
